Correct arrow alignment.

--- a/packages/terra-popup/src/PopupArrow.scss
+++ b/packages/terra-popup/src/PopupArrow.scss
@@ -32,7 +32,7 @@
       &::after {
         border-bottom-color: #fff;
         border-top-width: 0;
-        left: -var(--terra-popup-arrow-inner-size, 10px);
+        left: calc(-1 * var(--terra-popup-arrow-inner-size, 10px));
         top: var(--terra-popup-arrow-inner-inset-size, 2px);
       }
     }
@@ -48,7 +48,7 @@
         border-bottom-width: 0;
         border-top-color: var(--terra-popup-arrow-inner-color, #fff);
         bottom: var(--terra-popup-arrow-inner-inset-size, 2px);
-        left: -var(--terra-popup-arrow-inner-size, 10px);
+        left: calc(-1 * var(--terra-popup-arrow-inner-size, 10px));
       }
     }
 
@@ -63,7 +63,7 @@
         border-left-width: 0;
         border-right-color: var(--terra-popup-arrow-inner-color, #fff);
         left: var(--terra-popup-arrow-inner-inset-size, 2px);
-        top: -var(--terra-popup-arrow-inner-size, 10px);
+        top: calc(-1 * var(--terra-popup-arrow-inner-size, 10px));
       }
     }
 
@@ -78,7 +78,7 @@
         border-left-color: var(--terra-popup-arrow-inner-color, #fff);
         border-right-width: 0;
         right: var(--terra-popup-arrow-inner-inset-size, 2px);
-        top: -var(--terra-popup-arrow-inner-size, 10px);
+        top: calc(-1 * var(--terra-popup-arrow-inner-size, 10px));
       }
     }
   }
